@@ -1883,8 +1883,7 @@ hd_comp_mgr_map_notify (MBWMCompMgr *mgr, MBWindowManagerClient *c)
     }
   else if (ctype == MBWMClientTypeNote)
     {
-      if (HD_IS_BANNER_NOTE (c) || HD_IS_INCOMING_EVENT_PREVIEW_NOTE (c)
-          || HD_IS_CONFIRMATION_NOTE (c))
+      if (HD_IS_BANNER_NOTE (c) || HD_IS_INCOMING_EVENT_PREVIEW_NOTE (c))
         hd_render_manager_add_to_front_group(actor);
 
       if (HD_IS_INCOMING_EVENT_NOTE (c))
